Fix navbar alignment on mobile

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -9,6 +9,10 @@
   padding-right: 10px;
 }
 
+.navbar-header {
+  float: left !important;
+}
+
 .dropdown-toggle.category {
   color: white;
   font-size: 22px;
